<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yusgalaxy.homeworkscheduler.NewTask"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/enter_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:gravity="top"
        android:hint="@string/enter_task_name"
        android:maxLength="128"
        android:imeOptions="actionNext">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/enter_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01"
        android:gravity="top"
        android:hint="@string/enter_task_description"
        android:maxLength="256"/>

    <EditText
        android:id="@+id/enter_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:focusable="false"
        android:inputType="date"
        android:gravity="top"
        android:hint="@string/enter_start_date"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/enter_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:inputType="date"
        android:gravity="top"
        android:hint="@string/enter_end_date"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_btn"/>

</LinearLayout>
